--- a/Spielplan.html
+++ b/Spielplan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adminbereich - Tischtennis Team-Lösung 11</title>
+    <title>Adminbereich - Tischtennis Team-Lösung</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -35,6 +35,10 @@
         .hidden {
             display: none;
         }
+        .error {
+            color: red;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
@@ -45,6 +49,7 @@
         <h3>Bitte Passwort eingeben:</h3>
         <input type="password" id="adminPassword" placeholder="Passwort">
         <button onclick="checkPassword()">Einloggen</button>
+        <div id="loginError" class="error"></div> <!-- Fehlermeldung hier -->
     </div>
 
     <!-- Admin-Funktionen nach Login -->
@@ -135,11 +140,15 @@
         // Login-Funktion
         function checkPassword() {
             const enteredPassword = document.getElementById('adminPassword').value;
+            const loginError = document.getElementById('loginError');
+
+            // Passwort-Überprüfung
             if (enteredPassword === correctPassword) {
                 document.getElementById('loginSection').style.display = 'none';
                 document.getElementById('adminSection').style.display = 'block';
+                loginError.textContent = ''; // Fehler zurücksetzen
             } else {
-                alert('Falsches Passwort');
+                loginError.textContent = 'Falsches Passwort, bitte versuche es erneut.'; // Fehlermeldung anzeigen
             }
         }
 
