--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             const playerName = document.getElementById('playerName').value.trim();
             if (playerName && !players.includes(playerName)) {
                 players.push(playerName);
-                document.getElementById('playerList').innerHTML += <li>${playerName}</li>;
+                document.getElementById('playerList').innerHTML += `<li>${playerName}</li>`;
                 document.getElementById('playerName').value = '';
             } else {
                 alert(playerName ? 'Spieler ist bereits hinzugefügt!' : 'Bitte einen gültigen Namen eingeben.');
@@ -126,14 +126,14 @@
             while (shuffledPlayers.length >= 2) {
                 const player1 = shuffledPlayers.pop();
                 const player2 = shuffledPlayers.pop();
-                const teamName = Team ${teamCount};
+                const teamName = `Team ${teamCount}`;
                 teams.push({ player1, player2, teamName });
-                const row = <tr>
+                const row = `<tr>
                     <td>${teamName}</td>
                     <td>${player1}</td>
                     <td>${player2}</td>
                     <td><input type="text" class="rename-input" value="${teamName}" onchange="updateTeamName(${teamCount - 1}, this.value)"></td>
-                </tr>;
+                </tr>`;
                 teamTable.innerHTML += row;
                 teamCount++;
             }
@@ -228,12 +228,12 @@
             result: ''
         });
 
-        scheduleTable.innerHTML += <tr>
+        scheduleTable.innerHTML += `<tr>
             <td>Spiel ${matchCount - 1}</td>
             <td>${nextMatch.team1}</td>
             <td>${nextMatch.team2}</td>
             <td><input type="text" class="result-input" placeholder="Ergebnis" onchange="updateResult(${matchCount - 2}, this.value)"></td>
-        </tr>;
+        </tr>`;
     }
 
     set(ref(db, 'spielplan'), schedule);
