--- a/viewer.html
+++ b/viewer.html
@@ -23,8 +23,8 @@
     </style>
 </head>
 <body>
-    <h1>Spielplan</h1>
-    <p>Hier ist der Spielplan für das Tischtennis-Turnier:</p>
+    <h1>TTT</h1>
+    <p>Spielplan für das Turbine-Tischtennis-Turnier:</p>
 
     <h3>Spielplan:</h3>
     <table id="scheduleTable">
