--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team-Losung Tischtennis v1.2</title>
+    <title>Team-Losung Tischtennis v1.3</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -233,6 +233,28 @@
 
     set(ref(db, 'spielplan'), schedule);
 }
+
+        function updateSetResult(matchIndex, setIndex, result) {
+    schedule[matchIndex].results[setIndex] = result;
+
+    // Berechnung des Endergebnisses
+    const results = schedule[matchIndex].results;
+    const team1Wins = results.filter(r => parseInt(r.split('-')[0]) > parseInt(r.split('-')[1])).length;
+    const team2Wins = results.filter(r => parseInt(r.split('-')[1]) > parseInt(r.split('-')[0])).length;
+
+    if (team1Wins === 2 || team2Wins === 2) {
+        schedule[matchIndex].finalResult = team1Wins === 2 ? `${schedule[matchIndex].team1} gewinnt` : `${schedule[matchIndex].team2} gewinnt`;
+    } else {
+        schedule[matchIndex].finalResult = 'Noch nicht entschieden';
+    }
+
+    // Update der Anzeige
+    document.getElementById(`finalResult${matchIndex}`).textContent = schedule[matchIndex].finalResult;
+
+    // Speichern in Firebase
+    set(ref(db, 'spielplan'), schedule);
+}
+
 
         function updateResult(matchIndex, result) {
             schedule[matchIndex].result = result;
