--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team-Losung Tischtennis v1.4</title>
+    <title>Team-Losung Tischtennis v1.1</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -235,7 +235,14 @@
 }
 
 function updateSetResult(matchIndex, setIndex, result) {
-    // Speichere das Satz-Ergebnis
+    // Prüfen, ob das Ergebnis im Format "Punkte1-Punkte2" ist
+    const resultRegex = /^\d+-\d+$/;
+    if (!resultRegex.test(result)) {
+        alert('Ungültiges Ergebnisformat. Bitte verwenden Sie das Format "11-9" oder "21-19".');
+        return;
+    }
+
+    // Ergebnis in den Spielplan eintragen
     schedule[matchIndex].results[setIndex] = result;
 
     // Berechne das Endergebnis
@@ -249,21 +256,18 @@ function updateSetResult(matchIndex, setIndex, result) {
         return team2Points > team1Points;
     }).length;
 
-    // Setze das finale Ergebnis, wenn ein Team 2 Sätze gewinnt
     if (team1Wins === 2 || team2Wins === 2) {
         schedule[matchIndex].finalResult = team1Wins === 2 ? `${schedule[matchIndex].team1} gewinnt` : `${schedule[matchIndex].team2} gewinnt`;
     } else {
-        schedule[matchIndex].finalResult = 'Noch nicht entschieden';
+        schedule[matchIndex].finalResult = '';
     }
 
-    // Aktualisiere die Anzeige im Browser
-    document.getElementById(`finalResult${matchIndex}`).textContent = schedule[matchIndex].finalResult;
-
-    // Speichere das aktualisierte Spiel in Firebase
+    // Speichere die Ergebnisse in Firebase
     set(ref(db, 'spielplan'), schedule)
-        .then(() => console.log('Spielplan erfolgreich aktualisiert.'))
-        .catch(error => console.error('Fehler beim Speichern des Spielplans:', error));
+        .then(() => console.log('Ergebnisse erfolgreich aktualisiert.'))
+        .catch(error => console.error('Fehler beim Speichern der Ergebnisse:', error));
 }
+
 
 
 
