--- a/viewer.html
+++ b/viewer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spielplan v1.0</title>
+    <title>Spielplan v1.1</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -117,58 +117,71 @@
         });
 
         function renderSchedule(schedule) {
-            scheduleTable.innerHTML = '';
-            standingsTable.innerHTML = '';
+    scheduleTable.innerHTML = '';
+    standingsTable.innerHTML = '';
 
-            const standings = {};
+    const standings = {};
 
-            schedule.forEach(game => {
-                const row = `<tr>
-                    <td>Spiel ${game.match}</td>
-                    <td>${game.team1}</td>
-                    <td>${game.team2}</td>
-                    <td>${game.result || 'Offen'}</td>
-                </tr>`;
-                scheduleTable.innerHTML += row;
+    schedule.forEach(game => {
+        // Punkte und Punktverhältnis aus den results berechnen
+        let pointsTeam1 = 0;
+        let pointsTeam2 = 0;
 
-                if (game.result) {
-                    const [score1, score2] = game.result.split('-').map(Number);
-                    if (!standings[game.team1]) standings[game.team1] = { wins: 0, losses: 0, scored: 0, conceded: 0, goalDiff: 0 };
-                    if (!standings[game.team2]) standings[game.team2] = { wins: 0, losses: 0, scored: 0, conceded: 0, goalDiff: 0 };
+        game.results.forEach(set => {
+            const [score1, score2] = set.split('-').map(Number);
+            pointsTeam1 += score1;
+            pointsTeam2 += score2;
+        });
 
-                    standings[game.team1].scored += score1;
-                    standings[game.team1].conceded += score2;
-                    standings[game.team2].scored += score2;
-                    standings[game.team2].conceded += score1;
+        // Eintrag in der Spielplan-Tabelle
+        const row = `<tr>
+            <td>Spiel ${game.match}</td>
+            <td>${game.team1}</td>
+            <td>${game.team2}</td>
+            <td>${game.finalResult} (${game.results.join(', ')})</td>
+        </tr>`;
+        scheduleTable.innerHTML += row;
 
-                    standings[game.team1].goalDiff += score1 - score2;
-                    standings[game.team2].goalDiff += score2 - score1;
+        // Initialisiere die Teams in der Standings-Tabelle
+        if (!standings[game.team1]) standings[game.team1] = { wins: 0, losses: 0, scored: 0, conceded: 0, goalDiff: 0 };
+        if (!standings[game.team2]) standings[game.team2] = { wins: 0, losses: 0, scored: 0, conceded: 0, goalDiff: 0 };
 
-                    if (score1 > score2) {
-                        standings[game.team1].wins += 2;
-                        standings[game.team2].losses += 2;
-                    } else if (score1 < score2) {
-                        standings[game.team1].losses += 2;
-                        standings[game.team2].wins += 2;
-                    }
-                }
-            });
+        // Punktestand und Spielausgang aktualisieren
+        standings[game.team1].scored += pointsTeam1;
+        standings[game.team1].conceded += pointsTeam2;
+        standings[game.team2].scored += pointsTeam2;
+        standings[game.team2].conceded += pointsTeam1;
 
-            const sortedStandings = Object.entries(standings)
-                .map(([team, data]) => ({ team, ...data }))
-                .sort((a, b) => b.wins - a.wins || b.goalDiff - a.goalDiff);
+        standings[game.team1].goalDiff += pointsTeam1 - pointsTeam2;
+        standings[game.team2].goalDiff += pointsTeam2 - pointsTeam1;
 
-            sortedStandings.forEach((entry, index) => {
-                const row = `<tr>
-                    <td>${index + 1}</td>
-                    <td>${entry.team}</td>
-                    <td>${entry.wins}:${entry.losses}</td>
-                    <td>${entry.scored}:${entry.conceded}</td>
-                    <td>${entry.goalDiff}</td>
-                </tr>`;
-                standingsTable.innerHTML += row;
-            });
+        if (game.finalResult.includes(game.team1)) {
+            standings[game.team1].wins += 2;
+            standings[game.team2].losses += 2;
+        } else if (game.finalResult.includes(game.team2)) {
+            standings[game.team1].losses += 2;
+            standings[game.team2].wins += 2;
         }
+    });
+
+    // Sortiere die Tabelle nach Punkten und Punktverhältnis
+    const sortedStandings = Object.entries(standings)
+        .map(([team, data]) => ({ team, ...data }))
+        .sort((a, b) => b.wins - a.wins || b.goalDiff - a.goalDiff);
+
+    // Standings-Tabelle rendern
+    sortedStandings.forEach((entry, index) => {
+        const row = `<tr>
+            <td>${index + 1}</td>
+            <td>${entry.team}</td>
+            <td>${entry.wins}:${entry.losses}</td>
+            <td>${entry.scored}:${entry.conceded}</td>
+            <td>${entry.goalDiff}</td>
+        </tr>`;
+        standingsTable.innerHTML += row;
+    });
+}
+
 
         function renderTeams(teams) {
             teamsTable.innerHTML = '';
